--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <!-- your content here... -->
   <h1>JavaScript Adventure Game</h1>
+  <p>This is the adventure of Juan, who got lost in the forest</p>
   <script src="js/scripts.js"></script>
 </body>
 </html>
