--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- your content here... -->
   <h1>JavaScript Adventure Game</h1>
   <p>This is the adventure of Liv, who got lost in the forest</p>
+  <p>Enjoy</p>
   <script src="js/scripts.js"></script>
 </body>
 </html>
