--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- your content here... -->
   <div class="container">
     <h1>JavaScript Adventure Game</h1>
-    <p>This is the adventure of Juan, who got lost in the forest</p>
+    <p>This is the adventure of Liv, who got lost in the forest</p>
   </div>
   </body>
   <script src="js/scripts.js"></script>
