Fixed link to script file and linked css file

--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>A Basic HTML5 Template</title>
-  <style>
-    .container {
-      width: 900px;
-      height: 100%;
-      margin: 40px auto;
-      border-radius: 25px;
-      border: 1px solid #000;
-    }
-  </style>
+  <title>Text Adventure Game</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <!-- your content here... -->
   <div class="container">
+    <img src="juan.jpg">
     <h1>JavaScript Adventure Game</h1>
     <p>This is the adventure of Liv, who got lost in the forest</p>
+    <div id="option-buttons" class="buttons-grid">
+      <button class="button"></button>
+      <button class="button"></button>
+      <button class="button"></button>
+      <button class="button"></button>
+    </div>
   </div>
-  </body>
-  <script src="js/scripts.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
